# DummyDataAPI

./: Cargo.toml
db/: docker-compose.yml
migrations/: 20251231111236_create_user_table.sql  20260102100446_create_admin_user.sql
src/: book.rs  main.rs
